implementing sorting based on sortOrder