@@ -12,8 +12,10 @@ import android.os.Looper;
 import android.util.Log;
 
 import java.util.ArrayList;
-import java.util.Comparator;
+import java.util.Collections;
 import java.util.List;
+import java.util.Comparator;
+import java.util.stream.Collectors;
 
 import edu.ucsd.cse110.habitizer.lib.domain.Routine;
 import edu.ucsd.cse110.habitizer.lib.domain.RoutineRepository;
@@ -25,12 +27,12 @@ import edu.ucsd.cse110.observables.PlainMutableSubject;
 public class MainViewModel extends ViewModel {
     // Domain state (true "Model" state)
     private final RoutineRepository routineRepository;
-    private final TaskRepository mTaskRepository;
+    private final TaskRepository taskRepository;
     private final TaskRepository eTaskRepository;
 
     // UI state
     private final PlainMutableSubject<String> routineGoalTime;
-    private final PlainMutableSubject<List<Integer>> mTaskOrdering;
+    private final PlainMutableSubject<List<Integer>> taskOrdering;
     private final PlainMutableSubject<List<Integer>> eTaskOrdering;
 
     // LiveData to hold the elapsed time text
@@ -40,31 +42,31 @@ public class MainViewModel extends ViewModel {
     private final PlainMutableSubject<List<Integer>> RoutineOrdering;
 
     // LIST OF ORDERED TASKS
-    private final PlainMutableSubject<List<Task>> orderedMTasks;
+    private final PlainMutableSubject<List<Task>> orderedTasks;
 
     private final PlainMutableSubject<List<Routine>> orderedRoutines;
 
     public static final ViewModelInitializer<MainViewModel> initializer =
-            new ViewModelInitializer<>(
-                    MainViewModel.class,
-                    creationExtras -> {
-                        var app = (HabitizerApplication) creationExtras.get(APPLICATION_KEY);
-                        assert app != null;
-                        return new MainViewModel(app.getRoutineRepository(), app.getMTaskRepository(), app.getETaskRepository());
-                    });
+        new ViewModelInitializer<>(
+            MainViewModel.class,
+            creationExtras -> {
+                var app = (HabitizerApplication) creationExtras.get(APPLICATION_KEY);
+                assert app != null;
+                return new MainViewModel(app.getRoutineRepository(), app.getMTaskRepository(),app.getETaskRepository());
+            });
 
     public MainViewModel(RoutineRepository r, TaskRepository m, TaskRepository e) {
         this.routineRepository = r;
-        this.mTaskRepository = m;
+        this.taskRepository = m;
         this.eTaskRepository = e;
 
         // Create the observable subjects.
         routineGoalTime = new PlainMutableSubject<>();
-        mTaskOrdering = new PlainMutableSubject<>();
+        taskOrdering = new PlainMutableSubject<>();
         eTaskOrdering = new PlainMutableSubject<>();
         RoutineOrdering = new PlainMutableSubject<>();
 
-        orderedMTasks = new PlainMutableSubject<>();
+        orderedTasks = new PlainMutableSubject<>();
         orderedRoutines = new PlainMutableSubject<>();
 
         routineRepository.find(0).observe(routine -> {
@@ -73,33 +75,36 @@ public class MainViewModel extends ViewModel {
         });
 
         // When the list of tasks changes (or is first loaded), reset the ordering.
-        mTaskRepository.findAll().observe(tasks -> {
+        taskRepository.findAll().observe(tasks -> {
             if (tasks == null) return; // not ready yet, ignore
 
-            var newOrderedTasks = tasks.stream()
-                    .sorted(Comparator.comparingInt(Task::getTid))
-                    .toList();
+//            var ordering = new ArrayList<Integer>();
+//            for (int i = 0; i < tasks.size(); i++) {
+//                ordering.add(i);
+//            }
+            var newOrdering = tasks.stream()
+                            .sorted(Comparator.comparingInt(Task::getSortOrder))
+                            //.map(Task::getId)
+                            .collect(Collectors.toList());
+//            Collections.sort(newOrdering);
+            Log.d("Debug ordering", newOrdering.toString());
 
-            var ordering = new ArrayList<Integer>();
-            for (Task t : newOrderedTasks) {
-                ordering.add(t.getTid());
-            }
-
-            mTaskOrdering.setValue(ordering);
+            orderedTasks.setValue(newOrdering);
         });
 
-        mTaskOrdering.observe(ordering -> {
-            if (ordering == null) return;
-
-            var tasks = new ArrayList<Task>();
-            for (var id : ordering) {
-                var task = mTaskRepository.find(id).getValue();
-                if (task == null) return;
-                tasks.add(task);
-
-            }
-            this.orderedMTasks.setValue(tasks);
-        });
+//        taskOrdering.observe(ordering -> {
+//            if (ordering == null) return;
+//
+//            var tasks = new ArrayList<Task>();
+//            for (var id : ordering) {
+//                var task = taskRepository.find(id).getValue();
+//                if (task == null) return;
+//                tasks.add(task);
+//
+//            }
+//            Log.d("asdfg", orderedTasks.getValue().toString());
+//            this.orderedTasks.setValue(tasks);
+//        });
 
         routineRepository.findAll().observe(routines -> {
             if (routines == null) return;
@@ -141,13 +146,9 @@ public class MainViewModel extends ViewModel {
 
     }
 
-    public PlainMutableSubject<List<Task>> getOrderedTasks() {
-        return orderedMTasks;
-    }
+    public PlainMutableSubject<List<Task>> getOrderedTasks() { return orderedTasks; }
+    public PlainMutableSubject<List<Routine>> getOrderedRoutines() { return orderedRoutines; }
 
-    public PlainMutableSubject<List<Routine>> getOrderedRoutines() {
-        return orderedRoutines;
-    }
 
     public Routine getRoutine(int routineId){
         return orderedRoutines.getValue().get(routineId);
@@ -200,20 +201,20 @@ public class MainViewModel extends ViewModel {
 
     public void addTask(Task task, int routineId){
         getRoutine(routineId).addTask(task);
-        mTaskRepository.save(task);
+        taskRepository.save(task);
     }
 
     public Task getTask(int taskId) {
-        return mTaskRepository.find(taskId).getValue();
+        return taskRepository.find(taskId).getValue();
     }
 
-    public void renameTask(int taskId, String taskName) {
-        mTaskRepository.renameTask(taskId, taskName);
+    public void renameTask(int taskId, String taskName){
+        taskRepository.renameTask(taskId, taskName);
     }
 
     public void removeTask(int taskId, int routineId) {
         getRoutine(routineId).removeTask(taskId);
-        mTaskRepository.removeTask(taskId);
+        taskRepository.removeTask(taskId);
     }
 
     public void addRoutine(String name){
